# DesktopIcons

./: .gitignore  README.md  pyproject.toml
src/desktop_icons/: __init__.py  core.py  exceptions.py
